tests/pos/operators/str.ts

/*@ baz :: () => {v: string | v = "cat"} */
export function baz(): string {
    let z: string = "cat";
    return z;
}
